--- a/include/views/default/seven/frontend/work.phtml
+++ b/include/views/default/seven/frontend/work.phtml
@@ -23,37 +23,42 @@
 	<div class="divider"></div>
 </div>
 
-<div class="content-padding" ng-controller="SupportCtrl">
-	<br />
+<br />
+<div class="content-padding col-box" ng-controller="SupportCtrl">
+	<div class="two-col">
+		<h4>Delivery drivers</h4>
+		<p>
+			What's better than getting delivery food? Delivering the food! If you have a smartphone, car, and auto insurance, send us a message!
+		</p>
+		<br />
+		<a href ng-click="navigation.link('/drivers/apply','push')"><button class="button lightorange">apply now</button></a>
+		<br /><br /><br /><br />
+	</div>
+
+	<div class="two-col">
+		<h4>Community Representative</h4>
+		<p>
+			No one knows more about your college or community than you. You know what's "cool", and that's why we’re going to work with you! Scout for local awesome restaurants to sign up, and play a significant role in orchestrating marketing campaigns.
+		</p>
+		<br />
+		<a href="mailto:{{reps}}"><button class="button lightorange">join up</button></a>
+		<br /><br /><br /><br />
+	</div>
 	
-	<h4>Delivery drivers</h4>
-	<p>
-		What's better than getting delivery food? Delivering the food! If you have a smartphone, car, and auto insurance, send us a message!
-	</p>
-	<br />
-	<a href ng-click="navigation.link('/drivers/apply','push')"><button class="button lightorange">apply now</button></a>
-	<br /><br /><br /><br />
 
-	<h4>Community Representative</h4>
-	<p>
-		No one knows more about your college or community than you. You know what's "cool", and that's why we’re going to work with you! Scout for local awesome restaurants to sign up, and play a significant role in orchestrating marketing campaigns.
-	</p>
-	<br />
-	<a href="mailto:{{reps}}"><button class="button lightorange">join up</button></a>
-	<br /><br /><br /><br />
-
-	<h4>Rockstar Developers &amp; Designers</h4>
-	<p>Look at this beautiful website! It's almost perfect! You know what would make it better? Your magical touch! Join our small team of developers located in Los Angeles and let's get shit done!</p>
-	<br />
-	<a href="mailto:{{devs}}"><button class="button lightorange">rock out</button></a>
-</div>
-
-<div class="divider dots spacer-two-two"></div>
-
-<div class="content-padding" ng-controller="SupportCtrl">	
-	<h4>Who are you?!</h4>
-	<p>We're people! People who love food so much that we want to share our passion without asking you to even leave your homes.</p>
-	<br>
-	<button class="button green" ng-click="navigation.link('/about','push')">Meet the team</button>
-	<br><br><br>
+	<div class="two-col">
+		<h4>Rockstar Developers &amp; Designers</h4>
+		<p>Look at this beautiful website! It's almost perfect! You know what would make it better? Your magical touch! Join our small team of developers located in Los Angeles and let's get shit done!</p>
+		<br />
+		<a href="mailto:{{devs}}"><button class="button lightorange">rock out</button></a>
+		<br /><br /><br /><br />
+	</div>
+	
+	<div class="two-col">
+		<h4>Who are you?!</h4>
+		<p>We're people! People who love food so much that we want to share our passion without asking you to even leave your homes.</p>
+		<br>
+		<button class="button green" ng-click="navigation.link('/about','push')">Meet the team</button>
+		<br /><br /><br /><br />
+	</div>
 </div>
