--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -107,7 +107,7 @@
 	<div class="divider-orange-food divider-circle" ng-click="scrollHalf()"></div>
 	
 	<br /><br /><br />
-	<div class="content-padding col-box">
+	<div class="content-padding home-buttons col-box">
 		<div class="two-col">
 			<h4>Order your favorite restaurants, delivered</h4>
 			<p>Crunchbutton lets you order the best restaurants in your area delivered straight to your door. Place an order, and we save it for next time, along with your delivery and payment info. Come back and reorder your favorites with just one click.</p>
@@ -125,8 +125,6 @@
 		</div>
 	</div>
 
-	
-	<br><br>
 	<div class="divider dots spacer-two-one"></div>
 	
 
