--- a/www/assets/scss/style.scss
+++ b/www/assets/scss/style.scss
@@ -1249,6 +1249,7 @@ h1.about-header {
 	text-decoration:none;
 	cursor:default;
 	font-weight:bold;
+  	margin-top: 0;
 }
 .toggle-spacer {
 	margin:2px 12px 0 12px;
@@ -1389,9 +1390,7 @@ h1.about-header {
 	-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr='#f57333',endColorstr='#f26926')";
 	background:linear-gradient(#f57333,#f26926);
 }
-.toggle-active {
-	margin-top:2px;
-}
+
 .button-letseat-table {
 	width:100%;
 }
