changed some styling

--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -118,7 +118,7 @@
 			<h4>Who are you?!</h4>
 			<p>We're people! People who love food so much that we want to share our passion without asking you to even leave your homes.</p>
 			<br>
-			<button class="button green" ng-click="navigation.link('/about','push')">Meet the Team</button>
+			<button class="button lightorange" ng-click="navigation.link('/about','push')">Meet the Team</button>
 		</div>
 		<div class="two-col hide-mobile">
 			<div class="location-gorillia animated-resize"></div>
@@ -158,7 +158,7 @@
 				What's better than getting delivery food? Delivering the food! If you have a smartphone, car, and auto insurance, send us a message!
 			</p>
 			<br />
-			<a href ng-click="navigation.link('/drivers/apply','push')"><button class="button lightorange">Apply Now</button></a>
+			<a href ng-click="navigation.link('/drivers/apply','push')"><button class="button green">Apply Now</button></a>
 			<br /><br /><br /><br />
 		</div>
 
@@ -168,7 +168,7 @@
 				No one knows more about your college or community than you. You know what's "cool", and that's why we’re going to work with you! Scout for local awesome restaurants to sign up, and play a significant role in orchestrating marketing campaigns.
 			</p>
 			<br />
-			<a href="mailto:{{reps}}"><button class="button lightorange">Join up</button></a>
+			<a href="mailto:{{reps}}"><button class="button green">Join up</button></a>
 			<br /><br /><br /><br />
 		</div>
 
@@ -176,7 +176,7 @@
 			<h4>Rockstar Developers &amp; Designers</h4>
 			<p>Look at this beautiful website! It's almost perfect! You know what would make it better? Your magical touch! Join our small team of developers located in Los Angeles and let's get shit done!</p>
 			<br />
-			<a href="mailto:{{devs}}"><button class="button lightorange">Rock Out</button></a>
+			<a href="mailto:{{devs}}"><button class="button green">Rock Out</button></a>
 		</div>
 
 		<!--
