--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -45,7 +45,7 @@
 					</tr>
 				</table>
 			</li>
-			<li ng-click="navigation.link('/work')" ng-class="{'nav-active': (navigation.page == 'jobs')}">
+			<li ng-click="navigation.link('/work')" ng-class="{'nav-active': (navigation.page == 'work')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-briefcase"></i></td>
