--- a/include/views/default/crunchbutton/frontend/help.phtml
+++ b/include/views/default/crunchbutton/frontend/help.phtml
@@ -9,7 +9,7 @@
 	<!--<h1 class="about-header">Help</h1>-->
 	<p>
 		<b>Need to contact Crunchbutton?</b><br />
-		Problem with your order? Need help with your homework? Text or call us at <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or email us at <a href="mailto:{{customers}}">{{customers}}</a>. 
+		Problem with your order? Need help with your homework? Text or call us at <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or email us at <a href="mailto:{{happy_customers}}">{{happy_customers}}</a> or <a href="mailto:{{angry_customers}}">{{angry_customers}}</a>, as appropriate.
 		<br /><br />
 	</p>
 	<br /><br />
