--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -175,7 +175,7 @@
 					</div>
 
 					<br>
-					<button class="button green" ng-click="fullmenu=1">more food</button>						
+					<button class="button green" ng-click="fullmenu=1">see full menu</button>						
 
 
 
