--- a/include/views/default/seven/frontend/location.phtml
+++ b/include/views/default/seven/frontend/location.phtml
@@ -113,7 +113,7 @@
 			<p>Crunchbutton lets you order the best restaurants in your area delivered straight to your door. Place an order, and we save it for next time, along with your delivery and payment info. Come back and reorder your favorites with just one click.</p>
 			<br><br><br>
 			
-			<div class="location-gorillia hide-desktop"></div>
+			<div class="location-gorillia hide-desktop" ng-click="rage()"></div>
 			
 			<h4>Who are you?!</h4>
 			<p>We're people! People who love food so much that we want to share our passion without asking you to even leave your homes.</p>
@@ -121,7 +121,7 @@
 			<button class="button lightorange" ng-click="navigation.link('/about','push')">Meet the Team</button>
 		</div>
 		<div class="two-col hide-mobile">
-			<div class="location-gorillia animated-resize"></div>
+			<div class="location-gorillia animated-resize" ng-click="rage()"></div>
 		</div>
 	</div>
 
