--- a/include/views/default/seven/layout/html.phtml
+++ b/include/views/default/seven/layout/html.phtml
@@ -1,5 +1,8 @@
 <?=$this->display('layout/html.top')?>
 
+<script src="//use.typekit.net/qeo8tnt.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular-route.min.js"></script>
