--- a/www/assets/scss/style.scss
+++ b/www/assets/scss/style.scss
@@ -994,6 +994,14 @@ h1.about-header {
 	color:#D74924;
 	font-weight:400;
 	text-shadow:none !important;
+	line-height: 2em;
+}
+.restaurant-message-message {
+	font-size: 1.3em;
+}
+.restaurant-message-eta {
+
+	opacity: .8;
 }
 .cart-items {
 	float:right;
