--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -1773,7 +1773,19 @@ p {
 	opacity: .8; */
 }
 
+
+.form-icon {
+	color: #00957f;
+	font-size: 1.8em;
+	width: 1.1em;
+	text-align: center;
+	padding-right: .5em;
+}
+
 @media screen and (min-width: 1025px) {
+	.form-icon {
+		color: #00bea0;
+	}
 	.cart-item-customize-name, .cart-item-customize-price {
 		color: #fff;
 	}
@@ -1786,15 +1798,23 @@ p {
 	.cart-items .restaurant-title {
 		color: #fff;
 	}
-	.cart-items, .delivery-payment-info, .payment-form {
+	.restaurant-side-bar {
 		float: right;
 		width: 30em;
-		background: #373737;
+		background: #474747;
 		padding: 1.5em;
 		color: #fff;
 	}
+	.restaurant-side-bar .divider.dots {
+		background: none;
+		border: 0;
+	}
+	.restaurant-side-bar a {
+		color: #f88f68;
+	}
+	
 	.cart-items {
-
+		background: #373737;
 	}
 	.restaurant-items {
 		padding-top: 1.5em;
@@ -1952,6 +1972,21 @@ select.form-input {
 	min-width: 6em;
 	padding-right: 3em;
 }
+.cart-item-customize-item-select:after {
+	font-family: FontAwesome;
+	font-size: 1.7em;
+	color: #f77748;
+	height: 1.1em;
+	width: 1.4em;
+	border-left: 2px solid #f77748;
+	content: '\f0d7';
+	position: absolute;
+	margin-left: -1.6em;
+	margin-top: .1em;
+	padding-left: .37em;
+	padding-top: .3em;
+	pointer-events:none;
+}
 .form-input-select:after {
 	font-family: FontAwesome;
 	font-size: 1.7em;
@@ -1971,13 +2006,6 @@ select.form-input {
 	margin-left: 1.2em;
 }
 
-.form-icon {
-	color: #00957f;
-	font-size: 1.8em;
-	width: 1.1em;
-	text-align: center;
-	padding-right: .5em;
-}
 .form-group {
 	display: table;
 	width: 100%;
@@ -3446,21 +3474,7 @@ select {
 	font-size: 1.2em;
 }
 
-.cart-item-customize-item-select:after {
-	font-family: FontAwesome;
-	font-size: 1.7em;
-	color: #f77748;
-	height: 1.1em;
-	width: 1.4em;
-	border-left: 2px solid #f77748;
-	content: '\f0d7';
-	position: absolute;
-	margin-left: -1.7em;
-	margin-top: .15em;
-	padding-left: .37em;
-	padding-top: .3em;
-	pointer-events:none;
-}
+
 
 .cart-item-customize-select-name {
 	font-size: 1.2em;
